--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "smart-obt",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "ระบบจัดการทรัพย์สินและงานซ่อมบำรุง OBT Smart System",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
@@ -9,19 +10,31 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.5"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "bcrypt": "^5.1.1",
+    "exceljs": "^4.4.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.11.5",
+    "pg": "^8.12.0",
+    "qrcode": "^1.5.4"
   }
 }
