--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
+    "formidable": "^3.5.4",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "15.5.5",
     "react": "19.1.0",
@@ -36,7 +41,7 @@
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
-    "pg": "^8.12.0",
+    "pg": "^8.16.3",
     "qrcode": "^1.5.4"
   }
 }
