feat: รายงานปัญหา

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.1",
     "dotenv": "^17.2.3",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "formidable": "^3.5.4",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "15.5.5",
@@ -36,7 +38,7 @@
   "optionalDependencies": {
     "bcrypt": "^5.1.1",
     "exceljs": "^4.4.0",
-    "jspdf": "^2.5.1",
+    "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.2",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
