--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
+    "chart.js": "^4.5.1",
     "dotenv": "^17.2.3",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
@@ -25,6 +26,7 @@
     "leaflet": "^1.9.4",
     "next": "15.5.5",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0"
   },
