--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "formidable": "^3.5.4",
+    "formidable-serverless": "^1.1.1",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
